Sem5/LW2/Parser/LW2Parser.py
# Generated from LW2.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LW2Parser ( Parser ):

    grammarFileName = "LW2.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'\\n\\n'", "'\\n'", "' '" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "NAME", "FLOAT", "LINE_COMMENT", "WS" ]

    RULE_kb = 0
    RULE_header = 1
    RULE_implication = 2
    RULE_rule = 3
    RULE_elements = 4
    RULE_truth_degrees = 5
    RULE_element = 6
    RULE_membership_degree = 7
    RULE_separator = 8

    ruleNames =  [ "kb", "header", "implication", "rule", "elements", "truth_degrees", 
                   "element", "membership_degree", "separator" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    NAME=4
    FLOAT=5
    LINE_COMMENT=6
    WS=7

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class KbContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def header(self):
            return self.getTypedRuleContext(LW2Parser.HeaderContext,0)


        def implication(self):
            return self.getTypedRuleContext(LW2Parser.ImplicationContext,0)


        def rule_(self):
            return self.getTypedRuleContext(LW2Parser.RuleContext,0)


        def getRuleIndex(self):
            return LW2Parser.RULE_kb

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKb" ):
                listener.enterKb(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKb" ):
                listener.exitKb(self)




    def kb(self):

        localctx = LW2Parser.KbContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_kb)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 18
            self.header()
            self.state = 19
            self.implication()
            self.state = 20
            self.match(LW2Parser.T__0)
            self.state = 21
            self.rule_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HeaderContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(LW2Parser.NAME, 0)

        def getRuleIndex(self):
            return LW2Parser.RULE_header

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeader" ):
                listener.enterHeader(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeader" ):
                listener.exitHeader(self)




    def header(self):

        localctx = LW2Parser.HeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_header)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 23
            self.match(LW2Parser.NAME)
            self.state = 24
            self.match(LW2Parser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImplicationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def elements(self):
            return self.getTypedRuleContext(LW2Parser.ElementsContext,0)


        def truth_degrees(self):
            return self.getTypedRuleContext(LW2Parser.Truth_degreesContext,0)


        def getRuleIndex(self):
            return LW2Parser.RULE_implication

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImplication" ):
                listener.enterImplication(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImplication" ):
                listener.exitImplication(self)




    def implication(self):

        localctx = LW2Parser.ImplicationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_implication)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 26
            self.elements()
            self.state = 27
            self.match(LW2Parser.T__1)
            self.state = 28
            self.truth_degrees()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def elements(self):
            return self.getTypedRuleContext(LW2Parser.ElementsContext,0)


        def truth_degrees(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LW2Parser.Truth_degreesContext)
            else:
                return self.getTypedRuleContext(LW2Parser.Truth_degreesContext,i)


        def getRuleIndex(self):
            return LW2Parser.RULE_rule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRule" ):
                listener.enterRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRule" ):
                listener.exitRule(self)




    def rule_(self):

        localctx = LW2Parser.RuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_rule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self.elements()
            self.state = 31
            self.match(LW2Parser.T__1)
            self.state = 32
            self.truth_degrees()
            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 33
                self.match(LW2Parser.T__1)
                self.state = 34
                self.truth_degrees()
                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def element(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LW2Parser.ElementContext)
            else:
                return self.getTypedRuleContext(LW2Parser.ElementContext,i)


        def separator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LW2Parser.SeparatorContext)
            else:
                return self.getTypedRuleContext(LW2Parser.SeparatorContext,i)


        def getRuleIndex(self):
            return LW2Parser.RULE_elements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElements" ):
                listener.enterElements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElements" ):
                listener.exitElements(self)




    def elements(self):

        localctx = LW2Parser.ElementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_elements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.element()
            self.state = 50
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3 or _la==4:
                self.state = 44
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==3:
                    self.state = 41
                    self.separator()
                    self.state = 46
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 47
                self.element()
                self.state = 52
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Truth_degreesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def membership_degree(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LW2Parser.Membership_degreeContext)
            else:
                return self.getTypedRuleContext(LW2Parser.Membership_degreeContext,i)


        def separator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LW2Parser.SeparatorContext)
            else:
                return self.getTypedRuleContext(LW2Parser.SeparatorContext,i)


        def getRuleIndex(self):
            return LW2Parser.RULE_truth_degrees

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTruth_degrees" ):
                listener.enterTruth_degrees(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTruth_degrees" ):
                listener.exitTruth_degrees(self)




    def truth_degrees(self):

        localctx = LW2Parser.Truth_degreesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_truth_degrees)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.membership_degree()
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3 or _la==5:
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==3:
                    self.state = 54
                    self.separator()
                    self.state = 59
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 60
                self.membership_degree()
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(LW2Parser.NAME, 0)

        def getRuleIndex(self):
            return LW2Parser.RULE_element

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElement" ):
                listener.enterElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElement" ):
                listener.exitElement(self)




    def element(self):

        localctx = LW2Parser.ElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_element)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(LW2Parser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Membership_degreeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FLOAT(self):
            return self.getToken(LW2Parser.FLOAT, 0)

        def getRuleIndex(self):
            return LW2Parser.RULE_membership_degree

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMembership_degree" ):
                listener.enterMembership_degree(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMembership_degree" ):
                listener.exitMembership_degree(self)




    def membership_degree(self):

        localctx = LW2Parser.Membership_degreeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_membership_degree)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(LW2Parser.FLOAT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SeparatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LW2Parser.RULE_separator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSeparator" ):
                listener.enterSeparator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSeparator" ):
                listener.exitSeparator(self)




    def separator(self):

        localctx = LW2Parser.SeparatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_separator)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(LW2Parser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





